--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -216,18 +216,19 @@
             .return-button {
                 position: absolute;
                 bottom: 10px;
-                /* Adjust bottom spacing as needed */
                 margin-left: 1275px;
                 padding: 10px 20px;
                 background-color: #D5C069;
-                /* Background color */
                 color: black;
-                /* Text color */
                 border: none;
                 border-radius: 5px;
+                transition: 0.5s;
                 cursor: pointer;
+                
             }
-
+            .return-button:hover{
+                background-color: #555;
+            }
             .search-bar {
                 position: absolute;
                 
@@ -272,9 +273,6 @@
             </div>
 
         </div>
-        
-
-
         <div class="vertical-line"></div>
         <div class="grid-container">
             <div class="grid">
