delete active workout

--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -272,7 +272,7 @@
         </style>
         <h3 class="entrPrefait">Nos entraînements prêts à l'emploi !</h3>
         <h3 class="entrCustom">Créez votre propre entraînement !</h3>
-        <div class="creeWorkoutCard">
+        <div id="WorkoutCreationCard" class="creeWorkoutCard">
             <div style="margin-top: 20px; display: flex; flex-direction: column; height: 20%; width: 100%; align-items: center;">
                 <input type="text" id="titleWorkout" placeholder="Nouveau Entrainement" style="height: 50%; width: 80%; font-size: 
                 xx-large; text-align: center; border: none; outline: none; background: transparent; color: wheat;">
@@ -292,6 +292,7 @@
             " wrap="soft">
             </textarea>
             </div>
+            <button>AAAAAAAAAAA</button>
 
         </div>
         <div class="vertical-line"></div>
@@ -381,4 +382,6 @@
 
     <script src="https://kit.fontawesome.com/df1a2f4d51.js" crossorigin="anonymous"></script>
     <script src="/app.js"></script>
+    <script src="/creationTemplate.js"></script>
+
     <%- include ("../partials/footer.ejs") %>
