--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -390,7 +390,7 @@
                 /* Center items horizontally within the container */
                 justify-content: space-evenly;
                 /* Distribute space evenly between children */
-                width: 90%;
+                width: 100%;
                 /* Adjust width as needed */
                 background-color: #333;
                 /* Example background color */
@@ -398,7 +398,8 @@
                 border-radius: 10px;
                 /* Rounded corners */
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                /* Subtle shadow for better visibility */
+                /* Subtle shado5w for better visibility */
+               
                 margin: auto;
                 /* Center the searchBody horizontally and vertically if inside another flex container or full page */
             }
