--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -298,7 +298,10 @@
             " wrap="soft">
             </textarea>
             </div>
-            <button id="AfficherSelectExo">AAAAAAAAAAA</button>
+            <div id="allExercicesInTemplate">
+
+            </div>
+            <button id="AfficherSelectExo">Ajouter un exercise</button>
 
         </div>
         <div class="vertical-line"></div>
