Workout nom + description sauvegarde

--- a/Prototype 1/views/Pages/app.ejs
+++ b/Prototype 1/views/Pages/app.ejs
@@ -396,8 +396,8 @@
 
         <!-- Return button -->
         <div class="workoutCompletionSection">
-            <button id="returnButton" class="return-button" onclick="hideChoisirEntrainement()">Retourner</button>
-            <button id="confirmWorkoutCreationButton"class="confirmWorkout-button" onclick="hideChoisirEntrainement()">Confirmer</button>
+            <button id="returnButton" class="return-button">Retourner</button>
+            <button id="confirmWorkoutCreationButton"class="confirmWorkout-button">Confirmer</button>
         </div>
     </div>
     <div class="Chercher-Exercice hidden">
