--- a/Prototype 1/views/Pages/resetMdp.ejs
+++ b/Prototype 1/views/Pages/resetMdp.ejs
@@ -26,7 +26,7 @@
                       </div>
                     </div>
                   </div>
-                  <form action="#!">
+                  <form action="/submit-reset" method="POST">
                     <div class="row gy-3 overflow-hidden">
                       <div class="col-12">
                         <div class="form-floating mb-3">
