--- a/Prototype 1/public/app.css
+++ b/Prototype 1/public/app.css
@@ -7,10 +7,34 @@
     transition: left 0.5s ease;
     z-index: 0;
 }
+.affichage{
+    position: absolute;
+    top: 0;
+    left: -60%; /* Adjust to position it correctly */
+    padding-right: 60%;
+    width: 100%;
+    height: 100%;
+    transition: left 0.5s ease;
+    z-index: 0;
+    overflow-y: scroll;
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+   
+    
+}
+
+.affichage::-webkit-scrollbar {
+    display: none;
+}
+
+
 
 .hidden {
-    left: -100%; 
+    left: -300%; 
 }
+
+
 
 .show {
     left: 0;
@@ -27,6 +51,11 @@
     transition: left 0.5s ease;
     /* Animation de glissement */
     z-index: 0;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+.Choisir-Entrainement::-webkit-scrollbar {
+    display: none;
 }
 
 .profile-page {
@@ -43,7 +72,7 @@
 
 .exercice-card {
     position: absolute;
-    margin-left: 10%;
+    margin-left: 70%;
     top: 80px;
     left: 120%;
     width: 17%;
@@ -55,6 +84,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    z-index: 1;
 }
 
 
@@ -148,7 +178,7 @@
 }
 
 .hidden {
-    left: -100%;
+    left: -300%;
     /* Cache la page à gauche */
 }
 
